# Reconnaissance-faciale_Muller_Automotive

./: .envrc  Cargo.toml  README.md  index.html  package-lock.json  package.json  readme.md
functions/: faceReco.py
react/: README.md
react/src/: App.css  App.jsx  index.css  main.jsx
react/src/Pages/: AddUser.jsx  Edit.jsx  Error404.jsx  Home.jsx  Login.jsx  Main.jsx  RecoFace.jsx
react/src/components/: AdminAddUser.jsx  AdminEditReco.jsx  AdminEditUser.jsx  AdminListUsers.jsx  Asideaa.jsx  Button.jsx  CheckAuthStatus.jsx  Header.jsx  Image.jsx  InputField.jsx  Layout.jsx  Logout.jsx  ThrowAdminError.jsx  UploadImage.jsx
rust/: readme.md
rust/src/: admin.rs  auth.rs  functions.py  main.rs  src.py
rust/src/functions/: resize.py  vectorisation.py
sql/: readme.md  sql.dump
src/: admin.rs  auth.rs  main.rs
src/Pages/: AddUser.jsx  Edit.jsx  Error404.jsx  Home.jsx  Login.jsx  Main.jsx  RecoFace.jsx
src/assets/images/: MA.jpg:Zone.Identifier  MA.jpgZone.Identifier
src/components/: AdminAddUser.jsx  AdminEditReco.jsx  AdminEditUser.jsx  AdminListUsers.jsx  Asideaa.jsx  Button.jsx  CheckAuthStatus.jsx  Header.jsx  Image.jsx  InputField.jsx  Layout.jsx  Logout.jsx  ThrowAdminError.jsx  UploadImage.jsx
src/functions/: faceReco.py
src/images/: images.jpeg:Zone.Identifier
src/img/: IMG20250324153638.jpg:Zone.Identifier
