[package]
name = "my_axum_project"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.20.3", features = ["auto-initialize"] }
axum = { version = "0.8.1", features = ["multipart"] }
tokio = { version = "1.44.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
multer = "2.0"
tower-http = { version = "0.6.2", features = ["cors"] }
base64 = "0.21"
